<resources>
    <string name="app_name">FA_Namrata_C0853345_android</string>
    <string name="google_maps_key">AIzaSyCb6mHsu4ph9RCL6a8SucpVhhbcuzh_Jzo</string>
    <string name="type_none">NONE</string>
    <string name="type_normal">NORMAL MAP</string>
    <string name="type_hybrid">HYBRID MAP</string>
    <string name="type_terrain">TERRAIN MAP</string>
    <string name="type_satellite">SATELLITE MAP</string>
    <string name="search_here">Try search here..!</string>
    <string name="search_or_long_press_on_map_to_save_favourites">Search or Long press on map to save favourites.!</string>
    <string name="search_or_long_press_on_map_to_change_favourites">Search or Long press on map to update favourites.!</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_fav_maps">FavMapsActivity</string>
    <string name="mark_as_visited"><u>Mark As Visited</u></string>
    <string name="get_directions"><u>Get Directions</u></string>
    <string name="get_distance"><u>Get Distance</u></string>
    <string name="get_nearby_restro_bars_cafe"><u>Get Nearby Restaurants, Bars and Cafe</u></string>
    <string name="update_location">Update Location</string>
    <string name="update_place">Update Place</string>
    <string name="swipe_item_to_delete_or_edit">Swipe item to delete or edit.</string>
    <string name="we_couldn_t_find_any_records">We couldn\'t find any records.</string>
    <string name="travel_map_app">Travel Map App</string>
    <string name="already">Already Visited</string>
    <string name="markasvisited">Mark As Visited</string>
</resources>