<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/type_none"
        android:padding="@dimen/_7sdp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/type_none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/type_normal"
        android:padding="@dimen/_7sdp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/type_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/type_hybrid"
        android:padding="@dimen/_7sdp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/type_hybrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/type_terrain"
        android:padding="@dimen/_7sdp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/type_terrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/type_satellite"
        android:padding="@dimen/_7sdp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/type_satellite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
</LinearLayout>